# skim

./: .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install
.github/workflows/: ci.yml  crates.yml  publish-github.yml
ci/: before_deploy.sh  install.sh  script.sh
examples/: custom_item.rs  custom_keybinding_actions.rs  downcast.rs  nth.rs  option_builder.rs  preview_callback.rs  sample.rs
man/man1/: sk-tmux.1  sk.1
plugin/: skim.vim
shell/: LICENSE  README.md  completion.bash  completion.zsh  key-bindings.bash  key-bindings.fish  key-bindings.zsh  skim.1
src/: ansi.rs  casmutex.rs  chunklist.rs  cli.rs  consts.rs  coordinator.rs  curses.rs  engine.rs  event.rs  field.rs  global.rs  header.rs  input.rs  input_new.rs  input_old.rs  item.rs  item_collector.rs  item_old.rs  lib.rs  main.rs  matcher.rs  matcher_new.rs  matcher_old.rs  model.rs  model_new.rs  options.rs  orderedvec.rs  orderredvec.rs  output.rs  prelude.rs  previewer.rs  query.rs  query_new.rs  reader.rs  reader_new.rs  score.rs  selection.rs  sender.rs  spinlock.rs  theme.rs  (+1 more)
src/engine/: all.rs  andor.rs  exact.rs  factory.rs  fuzzy.rs  mod.rs  regexp.rs  util.rs
src/helper/: ingest.rs  item.rs  item_collector.rs  item_provider.rs  item_reader.rs  mod.rs  selector.rs  string_reader.rs  sys_util.rs
src/sk/: item.rs  mod.rs  reader.rs
src/util/: eventbox.rs  mod.rs
test/: test_skim.py
