[package]
name = "skim"
version = "0.9.4"
authors = ["Zhang Jinzhou <lotabout@gmail.com>"]
description = "Fuzzy Finder in rust!"
documentation = "https://docs.rs/skim"
homepage = "https://github.com/lotabout/skim"
repository = "https://github.com/lotabout/skim"
readme  = "README.md"
keywords = ["fuzzy", "menu", "util"]
license = "MIT"
edition = "2018"

[lib]
name = "skim"
path = "src/lib.rs"

[[bin]]
name = "sk"
path = "src/bin/main.rs"

[dependencies]
nix = "0.23.0"
atty = "0.2.14"
regex = "1.5.5"
lazy_static = "1.3.0"
shlex = "0.1.1"
unicode-width = "0.1.4"
log = "0.4.6"
env_logger = "0.8.2"
time = "0.2.23"
clap = "2.26.2"
tuikit = "0.4.5"
vte = "0.9.0"
fuzzy-matcher = "0.3.7"
rayon = "1.0.3"
derive_builder = "0.9"
bitflags = "1.0.4"
timer = "0.2.0"
chrono = "0.4"
crossbeam = "0.8.0"
beef = "0.5.0" # compact cow
defer-drop = "1.0.1"

[features]
default = []

[profile.release]
lto = true
debug = false
