[package]
name = "skim"
version = "0.10.2"
authors = ["Zhang Jinzhou <lotabout@gmail.com>"]
description = "Fuzzy Finder in rust!"
documentation = "https://docs.rs/skim"
homepage = "https://github.com/lotabout/skim"
repository = "https://github.com/lotabout/skim"
readme  = "README.md"
keywords = ["fuzzy", "menu", "util"]
license = "MIT"
edition = "2018"

[lib]
name = "skim"
path = "src/lib.rs"

[[bin]]
name = "sk"
path = "src/bin/main.rs"

[dependencies]
nix = "0.25.0"
atty = { version = "0.2.14", optional = true }
regex = "1.6.0"
lazy_static = "1.4.0"
shlex = { version = "1.1.0", optional = true }
unicode-width = "0.1.9"
log = "0.4.17"
env_logger = { version = "0.9.0", optional = true }
time = "0.3.13"
clap = { version = "3.2.22", optional = true, features = ["cargo"] }
tuikit = "0.5.0"
vte = "0.11.0"
fuzzy-matcher = "0.3.7"
rayon = "1.5.3"
derive_builder = "0.11.2"
bitflags = "1.3.2"
timer = "0.2.0"
chrono = "0.4.22"
crossbeam = "0.8.2"
beef = "0.5.2" # compact cow
defer-drop = "1.2.0"

[dependencies.linked_hash_map]
package = "linked-hash-map"
version = "=0.5.6"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:atty", "dep:shlex", "dep:env_logger"]

[profile.release]
lto = true
debug = false
