[package]
name = "skim"
version = "0.10.2"
authors = ["Zhang Jinzhou <lotabout@gmail.com>"]
description = "Fuzzy Finder in rust!"
documentation = "https://docs.rs/skim"
homepage = "https://github.com/lotabout/skim"
repository = "https://github.com/lotabout/skim"
readme  = "README.md"
keywords = ["fuzzy", "menu", "util"]
license = "MIT"
edition = "2018"

[lib]
name = "skim"
path = "src/lib.rs"

[[bin]]
name = "sk"
path = "src/bin/main.rs"

[dependencies]
nix = { version = "0.26.1", default-features = false }
atty = { version = "0.2.14", optional = true }
regex = { version = "1.7.0" }
lazy_static = { version = "1.4.0", default-features = false }
shlex = { version = "1.1.0", optional = true, default-features = false }
unicode-width = { version = "0.1.10", default-features = false }
log = { version = "0.4.17", default-features = false }
env_logger = { version = "0.10.0", optional = true }
time = { version = "0.3.17", default-features = false }
clap = { version = "3.2.22", optional = true, features = ["cargo"] }
tuikit = { version = "0.5.0", default-features = false }
vte = { version = "0.11.0", default-features = false }
fuzzy-matcher = { version = "0.3.7", default-features = false }
rayon = { version = "1.6.0",  default-features = false }
derive_builder = { version = "0.12.0", default-features = false }
bitflags = { version = "1.3.2", default-features = false }
timer = { version = "0.2.0", default-features = false }
chrono = { version = "0.4.23", default-features = false }
crossbeam = { version = "0.8.2" }
beef = { version = "0.5.2",  default-features = false } # compact cow
once_cell = { version = "1.16.0", default-features = false }

[patch.crates-io]
timer = { git = "https://github.com/kimono-koans/timer.rs" }

[features]
default = ["cli"]
cli = ["dep:clap", "dep:atty", "dep:shlex", "dep:env_logger"]

[profile.release]
debug = false
